fix menu on small screens

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
     position: absolute;
     left: 2px;
     display: none;
-    width: 18%;
+    min-width: 18%;
     height: 50%;
     bottom: 5%;
     background: #c1c1c1;
